
* Add --platform, --python-version, --implementation and --abi parameters to
  ``pip download``. These allow utilities and advanced users to gather
  distributions for interpreters other than the one pip is being run on.
  (:pull:`3760`)

* Skip scanning virtual environments even when venv/bin/python is a dangling
  symlink.

* Added pip completion support for fish shell.

* Use git fetch --tags to fetch tags in addition to everything else that
  is normally fetched; this is necessary in case a git requirement url
  points to a tag or commit that is not on a branch (:pull:`3791`)


**8.1.2 (2016-05-10)**

* Fix a regression on systems with uninitialized locale (:issue:`3575`).

* Use environment markers to filter packages before determining if a
  required wheel is supported. Solves (:issue:`3254`).

* Make glibc parsing for `manylinux1` support more robust for the variety of
  glibc versions found in the wild (:issue:`3588`).

* Update environment marker support to fully support PEP 508 and legacy
  environment markers (:issue:`3624`).

* Always use debug logging to the ``--log`` file (:issue:`3351`).

* Don't attempt to wrap search results for extremely narrow terminal windows
  (:issue:`3655`).


**8.1.1 (2016-03-17)**

* Fix regression with non-ascii requirement files on Python 2 and add support
  for encoding headers in requirement files (:issue:`3548`, :pull:`3547`).


**8.1.0 (2016-03-05)**

* Implement PEP 513, which adds support for the manylinux1 platform tag,
  allowing carefully compiled binary wheels to be installed on compatible Linux
  platforms.

* Allow wheels which are not specific to a particular Python interpreter but
  which are specific to a particular platform (:issue:`3202`).

* Fixed an issue where ``call_subprocess`` would crash trying to print debug
  data on child process failure (:issue:`3521`, :pull:`3522`).

* Exclude the wheel package from the `pip freeze` output (like pip and setuptools).
  :issue:`2989`.
